@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.1307 2010-08-19 12:55:36 mg Exp $
+# $Id: CHANGES,v 1.1308 2010-08-19 13:22:58 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -10,6 +10,8 @@
 # --
 
 3.0.0 beta2 2010-??-??
+ - 2010-08-19 Fixed bug#5728 - Ticket history shows wrong date and time for agent
+    actions "createtime" (actually shows user creation date).
  - 2010-08-19 Fixed bug#5727 - Ticket-Search-Results are not sortable.
  - 2010-08-19 Fixed bug#5611 - Company-Button has the same function als Ticket-Button.
  - 2010-08-19 Fixed bug#5760 - Adding a new ticket in the customer interface results in 2 tickets.
